<resources>
    <string name="app_name">PlayTask</string>
    <string name="hello_android">Hello_Android</string>
    <string name="jnu">JNU</string>
    <string name="hello">Hello</string>
    <string name="change_text">Change Text</string>
    <string name="todo">TODO</string>
    <string name="Reward">Reward</string>
    <string name="show_task">PlayTask</string>
    <string name="confirm">confirm</string>
    <string name="none">0</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="add_task">添加任务</string>
    <string name="task_name">任务名称</string>
    <string name="task_scores">任务积分</string>
    <string name="task_num">次数</string>
    <string name="task_label">通过标签对任务进行分类</string>
    <string name="complete">完成</string>
    <string name="target_item_title">任务名称</string>
    <string name="target_complete_num">完成次数</string>
    <string name="task_num_add">+10</string>
    <string name="tag_now">当前标签：全部</string>
    <string name="help">帮助</string>
    <string name="remove">清除数据</string>
    <string name="name">用户名</string>
    <string name="bill">账单</string>
    <string name="add_new_reward">新建奖励</string>
    <string name="reward_point">消耗分数</string>
    <string name="reward_tag">通过标签对任务进行分类</string>
    <string name="reward_item_title">奖励名称</string>
    <string name="reward_num_add">-10</string>
    <string name="reward_complete_num">完成次数</string>
</resources>